--- a/src/pages/Home/MicahVideo/MicahVideo.scss
+++ b/src/pages/Home/MicahVideo/MicahVideo.scss
@@ -41,7 +41,7 @@
   margin-top: 30px;
 
   @include breakpoint($small-breakpoint) {
-    display: block;
+    display: inline-block;
   }
 }
 
